[package]
name = "ed"
version = "0.1.0"
authors = ["sabine <sabineschmaltz@gmail.com>"]


[dependencies]
lazy_static = "1.3.0"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
web-view = "0.4.0"
tera = "0.11"
notify = "4.0.0"
ftp = "3.0.1"
rouille = "3.0.0"
walkdir = "2"
image = "0.21.1"
csv = "1"